@@ -9,7 +9,7 @@
 
 #include "GeographicLib/LambertConformalConic.hpp"
 
-#define GEOGRAPHICLIB_LAMBERTCONFORMALCONIC_CPP "$Id: LambertConformalConic.cpp 6720 2009-10-17 23:13:57Z ckarney $"
+#define GEOGRAPHICLIB_LAMBERTCONFORMALCONIC_CPP "$Id$"
 
 RCSID_DECL(GEOGRAPHICLIB_LAMBERTCONFORMALCONIC_CPP)
 RCSID_DECL(GEOGRAPHICLIB_LAMBERTCONFORMALCONIC_HPP)
